--- a/source/_posts/高价购买，无私公开！可以实盘运行的趋势策略.md
+++ b/source/_posts/高价购买，无私公开！可以实盘运行的趋势策略.md
@@ -1,49 +1,48 @@
 ---
-title: 高价购买，无私公开！可以实盘运行的趋势策略
+title: Purchase at a high price and disclose it disinterestedly! Trend strategy that can be run live
 date: 2023-07-27 14:47:00
-categories:
-  - 量化交易
-tags:
-  - 策略
+categories: 
+  - Quantitative Trading
+tags:: 
+  - Strategy
   - CTA
-  - 量化交易
-  - python
-  - 实盘运行
-  - 低频策略
-  - 趋势
+  - Quantitative Trading
+  - CTA Quantitative Trading
+  - Live trading
+  - Low Frequency Strategies
+  - Trends
   - binance
-description: '趋势策略是量化交易中一种常见的策略思路,它是根据证券价格的趋势方向进行买卖的策略。该策略的基本思想是“趋势是你的朋友”。'
+description: 'A trend strategy is a common strategy idea in quantitative trading, it is a strategy that buys and sells securities based on the direction of their price trends. The basic idea of the strategy is that "the trend is your friend".'
 cover: https://s2.loli.net/2023/07/27/qZBWmO9yMPUdrwj.png
 ---
 
-在实盘运行的策略中，趋势策略绝对是一个绕不过，躲不开的一个话题。
+Among the strategies that run in the real world, the trend strategy is definitely a topic that you can't get around and can't hide from.
 
-## 趋势策略的优点
+## Advantages of Trend Strategy:
 
-1. 捕捉市场趋势,盈利空间大
-    趋势策略强调随着价格趋势行动,可以在较大的行情中捕捉超额收益。相比其他逆向操作策略,盈利空间更大。
-2.  减少交易频率,降低交易成本
-    趋势策略倾向于长时间持有头寸,减少交易频率,可以有效降低买卖手续费等交易成本。
-3. 实现长期持仓,时间利息收益
-    趋势策略可以实现较长的持仓时间,积累时间价值和利息收入。
-5. 实现了策略和时间上的双重多样化 
-    可以设计多种趋势策略组合使用,同时调整持仓时间,实现策略和时间上的双重多样化。
-6. 可量化设计和回测
-    趋势策略规则相对清晰,可以进行量化表达和回测,方便计算机执行。
-7. 可与其他策略组合使用
-    趋势策略可与反转、套利等策略组合使用,实现策略的多样性。
-    总体来说,捕捉市场趋势是量化交易的重要途径之一,趋势策略可以发挥其在盈利和风险控制上的优势。
+1. Capture market trends with large profit margins
+   Trend strategy emphasizes on acting with the price trend, which can capture the excess profit in the larger market. This allows you to capture excess profits in larger markets. This is a much more profitable strategy than other contrarian strategies.
+2. Reduce the frequency of trading, reduce transaction costs
+   Trend strategy tends to hold positions for a long time, reducing the frequency of transactions, you can effectively reduce the transaction costs, such as buying and selling fees.
+3. Realize long-term positions, time interest earnings
+   Trend strategy can realize a longer time to hold positions, the accumulation of time value and interest income.
+4. Realize the strategy and time on the double diversification 
+   Can design a variety of trend strategy combination, while adjusting the position time, to realize the strategy and time on the double diversification.
+5. Quantitative design and backtesting
+   The rules of trend strategies are relatively clear and can be quantitatively expressed and backtested, which is convenient for computerized execution.
+6. Can be used in combination with other strategies
+   Trend strategy can be used in combination with reversal, arbitrage and other strategies to realize the diversity of strategies.
+   Overall, to capture the market trend is one of the important ways of quantitative trading, trend strategy can play its advantages in profitability and risk control.
 
-## 趋势策略源代码
+## Trend Strategy Source Code
 
-下面提供的是一个binance交易所的趋势策略的源代码，当年自己身为初学者，花300的高价购买了这个代码，现在看来却是如此简单,这个代码存在很多不足之处，比如直接简单粗暴的使用了死循环，所有信息的获取都是同步而非异步获取，没有做容错处理等等，但是依然完成了一个量化交易策略基本的功能，并且作者本人的回测数据表明，在选对交易品种和交易参数的情况下在2019年到2020年的1年时间里面取得了惊人的16倍收益的战绩！
+The following is the source code of a binance exchange trend strategy, when I was a beginner, spent 300 high price to buy the code, now it seems so simple, there are many shortcomings in this code, such as the direct use of the dead loop simple and brutal, the acquisition of all the information is synchronous rather than asynchronous acquisition, not to do fault-tolerant processing, etc., but still accomplished a Quantitative trading strategy basic functions, and the author's own backtesting data show that in the case of the right trading varieties and trading parameters in 2019 to 2020 in a year's time to achieve an amazing 16 times the return of the results!
 
 ```python
-# 导入库
+
 import time, datetime, json, numpy as np, talib
 from binanceapipy3 import BINANCE
 
-# 获取相关常量
 currenttime = datetime.datetime.now().strftime('%Y-%m-%d %H:%M:%S')
 print(currenttime)
 date = datetime.datetime.now().strftime('%Y%m%d-%H%M%S')
@@ -51,7 +50,6 @@ load_file = open('apikey.json', 'r')
 load_dict = json.load(load_file)
 binance = BINANCE(load_dict['apikey'], load_dict['secret'])
 
-# 定义交易品种
 BASE = "USDT"
 QUOTE = "BTC"
 
@@ -102,18 +100,18 @@ while True:
             info = binance.order(symbol, 'SELL', 'MARKET', (float(asset[QUOTE])), recvWindow=60000)
 ```
 
-### 改进方向
+### Directions for improvement
 
-1. 优化参数
-    可以测试不同的参数组合,如移动平均线的周期参数,寻找最优参数以提高策略收益率。
-2. 使用try… except语句 提高容错，让程序更健壮。
-3. 改同步为为异步获取相关数据，加快代码运行速度
-4. 放弃print语句，改为logger方式，方便回溯和追踪问题。利于改进程序
-5. 改全部仓位成交为限定成交数量，便于后期规范和统一化。
-6. 改市价单位限价单，成交成本更合理可控。
+1. Parameter optimization
+   We can test different combinations of parameters, such as the period parameter of moving averages, to find the optimal parameter to improve the yield of the strategy. 2.
+2. use try... except statement to improve fault tolerance and make the program more robust. 3. change synchronous to asynchronous to get the relevant data.
+3. change synchronous to asynchronous to get the relevant data to speed up the code running speed.
+4. Abandon the print statement and change it to logger method, which is convenient for tracing back and tracking problems. Help to improve the program
+5. change all position transactions to limit the number of transactions, to facilitate the later standardization and uniformity.
+6. change the market price unit limit order, the transaction cost is more reasonable and controllable.
 
-## 总结
+## Summary
 
-趋势策略简单适合入门，非常适合开始量化交易的萌新。作为量化开始的第一个策略，能快速获得成就感，坚定往量化交易这条路走的决心是非常必要的。如果你入门就选择了一个高技术难度的策略，也许写不到一半人就崩溃了。导致失去信心。
+The Trend Strategy is simple and suitable for beginners, and is ideal for newcomers to quantitative trading. As the first strategy to start quantitative trading, it is essential to get a sense of accomplishment and determination to go down the road of quantitative trading. If you get started and choose a high technical difficulty strategy, perhaps less than half of the writing people collapse. Resulting in a loss of confidence.
 
-所以，我非常推荐，刚入门的萌新们跑起来试试，验证下自己的想法，获取你的第一笔收益！
+Therefore, I very much recommend that the newcomers who have just started to run up and try, to verify their own ideas and get your first gain!
