--- a/source/_posts/高频交易干货旧文分享兼回忆千千大神.md
+++ b/source/_posts/高频交易干货旧文分享兼回忆千千大神.md
@@ -1,129 +1,129 @@
 ---
-title: 高频交易干货旧文分享兼回忆千千大神
+title: High Frequency Trading Old Articles Sharing and Remembering God Qian Qian
 date: 2023-08-16 11:26:00
-categories:
-  - 量化交易
-tags:
-  - 高频交易
-  - 千千
+categories: 
+  - Quantitative trading
+tags: HF Trading
+  - high-frequency trading
   - hft
-  - 干货
   - quant
-  - 旧闻
+  - Old News
   - quant1098.com
-  - 删号跑路
-description: '当年千千大神说过挣到了1亿美金就公布自己的策略，估计现在已经挣到了，不知道他啥时候公布自己的策略。作为回忆旧人兼报复他言而无信。特此公布千千的付费文章一篇。哈哈'
-cover: https://s2.loli.net/2023/08/16/dL3D6ijvh2xQ1MJ.webp
+  - Deleted
+description: Back in the day, Mr. Qianqian said that he would announce his strategy once he had earned 100 million dollars, so I guess he has already earned it now. I don't know when he's going to announce his strategy. As a reminiscence of the old man and revenge for his broken promise. Hereby publish a paid article of Qianqian. Haha
+cover: https://s2.loli.net/2023/08/16/U62fivAZKjmWXtJ.png
 ---
 
-## 缘起
+## Origin
 
-偶尔在一个群里聊起了千千大神。结果才发现他已经成为一个神龙见首不见尾的存在。 招聘员工月薪都在几十万美金起了， 认识千千的时候，千千还是一个乐于分享，喜欢把实盘运行代码怼你脸上的热心群主。到后来，年入过亿，因为挣钱太多，全网删号跑路。找不到他了。
+Occasionally, I was chatting about Chichiri Daijin in a group. The result is to realize that he has become the existence of a Dragon's head and tail. Recruitment staff monthly salary are in hundreds of thousands of U.S. dollars from the time to recognize Qian Qian, Qian Qian is still a willing to share, like the actual disk running code dislike your face enthusiastic group owner. Later, the annual income of more than a hundred million, because too much money, the whole network deleted the number of run away. Can not find him.
 
 ![](https://s2.loli.net/2023/08/16/WRrYhDEC7atoqS5.webp)
 
- 作为报复，特此公布千千的旧文一篇，是高频方面的文章，希望能给您带来启发。走上打造印钞机的通天大道~~
+ As a retaliation, I hereby publish one of Chichi's old articles on high frequency. On the path to building a money-printing machine through the sky ~~
 
-## 高频交易原文
+## Original article on high frequency trading
 
-**量化高频印钞机建造指南（一） **
+** Quantitative high-frequency money-printing machine construction guide (I)
 
-**“如果说量化投资是投资领域的王冠，那么高频交易就是这项王冠上的明珠。高频交易最大的特点就是收益非常高，而风险非常小，当然作为代价，资金容量不会太大，所以这种策略一般不会对外募资，宽客们也往往不愿意分享**。**”**
+**"If quantitative investment is the crown of the investment field, then high-frequency trading is the jewel in this crown. The most important feature of high frequency trading is that the return is very high while the risk is very small, of course, as a price, the capital capacity will not be too large, so this strategy is generally not to raise funds from the public, and broadcasters are often reluctant to share **. **"**
 
-各位千千量化的伙伴们，许久未见，这次给大家带来承诺已久但长（我）期（很）难（懒）产的高频交易系列相关内容分享。本文是本系列的第一篇，也可能是最后一篇（遇到不可抗力），具体看情况而定。内容会涉及比较深入，**显著**区别于网上各种概念性介绍和各种蜻蜓点水的泛谈。
+Ladies and Gentlemen, I have not seen you for a long time, and this time I bring you the long-promised but long (I) difficult (very) to produce (lazy) high-frequency trading series related to content sharing. This article is the first of this series, may also be the last (encounter force majeure), depending on the circumstances. The content will involve more in-depth, **significantly** different from a variety of online conceptual introduction and a variety of slapdash generalizations.
 
-因为高频交易技术性过强，门槛较高，千千会尽量以简洁明了、多图少文少公式的方式去讲解，但其中仍不可避免的会涉及到一些比较难理解但又很重要的公式。同时，**需要说明的是千千本喵的高频交易水平也并不很高**（相比本领域诸神而言真的只能算是刚刚迈进门槛），所以只能尽量将自己认知范围内能讲的东西都写出来，正文内容都是自己做高频艰辛之路的心血，**如有侵权纯属意外**，希望各位大佬多多海涵！
+Because high-frequency trading is too technical, the threshold is higher, Qianqian will try to be concise and clear, more graphs and less text less formula way to explain, but which still inevitably involves some of the more difficult to understand but also very important formula. At the same time, ** need to explain is a thousand thousand meow this high frequency trading level is not very high ** (compared to the field of the gods can only really be regarded as just stepping into the threshold), so can only try to speak within the scope of their own cognition are written out, the body of the content is to do the arduous path of the blood of the high-frequency ** if infringement of purely accidental ** I hope that the big brother have more connotations!
 
-另外，千千真心希望这篇文章能对正在勇攀高频之峰的新宽客们有所启发，毕竟网络上能找到的高频交易干货分享太少了，千千自己从这条路走过来知道有多辛苦，**就像在一片黑暗的篮球场上练习投篮**，可能付出万倍心血仍一无所获，也可能从一开始方向就错了，也可能一个很简单的问题需要花很多时间绕一个大弯才发现正确答案如此简单。真正做高频交易的人往往不愿意出来分享，也没必要分享，因为分享真的是件很费力不讨好的事情。
+In addition, Qianqian sincerely hope that this article can be climbing the peak of the new broadcasters have inspiration, after all, the network can be found on the high-frequency trading dry goods to share too little, Qianqian himself from the road over know how hard, ** like in a dark basketball court to practice shooting **, may be to pay 10,000 times the effort is still nothing, may be the direction of the wrong from the outset, but also may be a very simple A very simple question takes a lot of time to go around a big corner to find the right answer is so simple. Really do high-frequency trading people are often not willing to come out to share, there is no need to share, because sharing is really a very laborious and unappealing thing.
 
-这是千千最近几个月某账号的高频策略实盘记录（本金很小参数激进），本系列分享的主要内容就是围绕这个策略来写的。
+This is a thousand thousand recent months of a certain account of high-frequency strategy real record (the principal is very small parameters aggressive), the main content of this series of sharing is written around this strategy.
 
 ![](https://s2.loli.net/2023/08/16/JTG14EKktS2qZOQ.jpg)
 
-可以看出，高频交易相比传统交易模式（主观交易类、CTA趋势类、套利类等等）有**资金容量小、回撤比较小、盈亏比高**的特点，可以说是**最适合**个人投资者深入研究的策略的类型。（趋势类和套利类策略更容易学习上手，但没有足够多本金的支持，绝对收益很难提高）
+As can be seen, high-frequency trading compared to traditional trading patterns (subjective trading, CTA trend class, arbitrage class, etc.) have ** small capital capacity, retracement is relatively small, profit and loss ratio is high ** characteristics, can be said to be ** the most suitable for ** individual investors in-depth study of the type of strategy. (Trend and arbitrage strategies are easier to learn to get started, but without the support of a large enough capital, it is difficult to increase the absolute return)
 
-下面开始正文。
+Let's start with the main text.
 
-### 高频概念
 
-**概念**
 
-为了便于新宽客们理解，重新描述一下高频交易：用计算机程序快速交易某种证券。（能付费说明来看的都是大佬，就不多啰嗦了）
+### High Frequency Concepts
 
-**预测和速度**
+**Concepts**
 
-高频交易涉及到**预测**和**速度的**问题，但需要注意**并不是**所有的高频策略都需要绝对的预测准确性和速度，往往只要突破某一点就能获取足够的利润（视市场环境而定）。
+In order to make it easier for new broadcasters to understand, to re-describe high-frequency trading: the use of a computer program to trade a security quickly. (Anyone who can pay for a description to see it is a big shot, so I won't ramble on too much)
 
-对价格运动可以用随机游走模型来描述。
+**Prediction and Speed**
+
+High-frequency trading involves the issues of **prediction** and **speed**, but note that **not** all high-frequency strategies require absolute prediction accuracy and speed, and often just breaking through a certain point is enough to make a profit (depending on market conditions).
+
+For price movement can be described by a stochastic wandering model.
 
 ![](https://s2.loli.net/2023/08/16/8W5bSPFunTzQXdf.jpg)
 
-其中，dSt表示价格变化，v表示价格运动的长期趋势（对于高频交易者因为持仓时间短，可以认为v=0），alpha表示价格运动的短期趋势（alpha随市场环境快速变化），dWt表示布朗运动随机游走，sigma表示随机游走程度的系数。
+Where, dSt represents the price change, v represents the long-term trend of price movement (for high-frequency traders because of the short time of the position, it can be considered that v = 0), alpha represents the short-term trend of price movement (alpha with the rapid changes in the market environment), dWt represents the Brownian movement of the random wandering, sigma represents the coefficient of the degree of random wandering.
 
-由此，可知高频交易的利润来源分两个部分，**价格短期趋势运动（趋势）和随机游走（震荡）**。注意这里讲的不是主观交易中分钟级及以上的k线中的趋势和震荡，而是秒级价格运动中的趋势和震荡。
+From this, it can be seen that the source of profit in high-frequency trading is divided into two parts, ** short-term trend movement of prices (trend) and random wandering (oscillator)**. Note that we are not talking about trends and oscillations in k-lines at the minute level and above in subjective trading, but rather trends and oscillations in price movements at the second level.
 
-**为什么不需要预测，高频策略也能盈利？**具体参考 Tanmoy Chakraborty 和 Michael Kearns 的论文 Market Making and Mean Reversion, 2011，解释了来自随机波动的这部分利润。
+**Why can high frequency strategies be profitable without forecasting? **Specific reference to the paper Market Making and Mean Reversion, 2011 by Tanmoy Chakraborty and Michael Kearns explains this part of profit from random fluctuations.
 
-例如数字货币市场前段时间的UNI、SUSHI、DOGE等等，在热点行情中，价格随机游走的距离远远大于价格短趋势中走过的距离。这也解释了价格涨50%，只做趋势的话，即使从头吃到尾，3倍杠杆也就是150%收益，这是趋势的天花板，但是如果做maker赚随机波动的钱，收益将远远超过前者，总体盈利可能是10倍或者100倍的区别。
+For example, UNI, SUSHI, DOGE, etc. in the digital currency market some time ago, the distance the price traveled randomly in the hot market was much greater than the distance the price traveled in the short trend. This also explains the fact that a 50% price increase, if you only do the trend, even if you eat from the beginning to the end, 3 times leverage is 150% gain, which is the ceiling of the trend, but if you do the maker to make money on random fluctuations, the gain will be far more than the former, and the overall profit may be 10 times or 100 times the difference.
 
-不预测会被知情交易者逆向选择，亏趋势的钱，但热点行情中，随机波动部分的收益可以轻松覆盖前者的亏损，平时的行情中，随机波动部分收益少于趋势部分收益。因此，明智的交易者需要准备不同的策略应对不同的行情，或者在一套策略里同时有赚趋势和赚价差两种逻辑在（比如切换模型参数或者不同的仓管模型）。
+No prediction will be informed traders to reverse the choice and lose money on the trend, but the hot market, the random fluctuation part of the gain can easily cover the former loss, the usual market, the random fluctuation part of the gain is less than the trend part of the gain. Therefore, a wise trader needs to prepare different strategies for different quotes, or have both trend-earning and spread-earning logic in one set of strategies at the same time (e.g. switching model parameters or different position models).
 
-**类别**
+**Categories**
 
-高频策略可以大致分为：抢盘口、做市、超短趋势三种。
+High-frequency strategies can be broadly categorized into three types: robbing the market, making the market, and ultra-short trend.
 
-| 策略类型 | 思路                                                         | 预测要求 | 速度要求 | 特点                                 |
-| -------- | ------------------------------------------------------------ | -------- | -------- | ------------------------------------ |
-| 抢盘口   | 依靠速度优势在买一卖一之间双向交易，一旦遇到方向性不利就甩给后面的大挂单，或在其他盘口对冲 | 很低     | 极高     | 顶级玩家专属单笔利润小手续费要求高   |
-| 做  市   | 在盘口上下挂单，和上下乱打的市价单成交，赚取中间的价差收益，需要较好的流动性和短期扛大浮亏 | 中等     | 中等     | 适合普通玩家单笔利润中手续费要求中   |
-| 超短趋势 | 同时预测价格方向和波动大小，市价单进场，价格快速运动，被吃掉的对手盘浮亏止损会使你快速兑现收益 | 很高     | 稍低     | 适合次顶级玩家单笔利润高手续费要求低 |
+| Type of strategy | reasoning                                                    | Forecasting requirements | speed requirement | specificities                                                |
+| ---------------- | ------------------------------------------------------------ | ------------------------ | ----------------- | ------------------------------------------------------------ |
+| chip in          | Relying on the speed advantage between buy one sell one bidirectional trading, once encountered in the direction of the unfavorable dump to the back of the large pending orders, or hedge in other orders | low                      | extremely high    | Exclusive to top players with small profit per transaction and high commission requirements |
+| make a market    | Hanging orders at the top and bottom of the plate, and the top and bottom of the market price of the single transaction, to earn the middle of the spread income, the need for better liquidity and short-term carry a large floating loss | moderate                 | moderate          | Suitable for the average player with a single profit in the handling fee requirements |
+| ultrashort trend | At the same time to predict the direction of the price and the size of the fluctuations, market orders into the market, the price of rapid movement, was eaten up by the opponent's floating loss stop loss will enable you to quickly cash gains | high                     | slightly lower    | Suitable for sub-top players with high profit per transaction and low commission requirements. |
 
-**常见场景：**
+**Common Scenarios:**
 
-1、盘口大单封堵，价格波动较低，散户在买一卖一间来回成交，一旦出现方向性变化，这些大单撤单速度极快，并且快速将不利仓位甩给排队在后面的单子，这就导致普通交易者，**挂近了成交，亏手续费，挂远了就很难成交，一旦成交，往往是前面反手甩出来的单子，很有可能要扛很久浮亏，很难抢到能盈利的单子**，而高频交易最忌讳的就是长时间扛单，这种标的是没有顶级费率和顶级基础设施的普通投资者极难通过高频盈利的，需要规避，或改用低频长时间持仓的交易策略，通过时间换空间。
+1, plate mouth large single blocking, price volatility is low, retail investors in the buy a sell a back and forth transaction, once the directional change, these large single withdrawal speed is extremely fast, and quickly unfavorable positions dumped to the queue in the back of the single, which leads to the average trader, ** hanging close to the transaction, loss of fees, hanging far away from the transaction is very difficult to turnover, and once the transaction is made, is often in front of the backhand dumped out of the single, it is very likely that you will have to carry for a very long time! Floating loss, it is difficult to grab the single can be profitable **, and high-frequency trading is the most taboo is a long time to carry a single, this subject is no top rates and top infrastructure of ordinary investors is extremely difficult to profit by high-frequency, need to avoid, or change to a low-frequency long position trading strategy, through time for space.
 
 ![](https://s2.loli.net/2023/08/16/OhsUpZo8cvaHPY6.jpg)
 
-2、买卖成交活跃，不仅是成交笔数、成交量这些大家熟知的概念，还需要注意**市价单击穿距离**（即一个市价单发送到盘口后，对盘口造成的冲击能否达到什么深度）。因为做市策略在盘口上下挂单，利润来自于成交价差，在行情平淡的时候，市价单数量少价格波动小，做市商如果不把单子挂近，很难获取利润，这时候一个市价单击穿可能只有万分之一，而当盘口活跃，市价单数量很多，并且多空纠缠在一个价位来回厮杀的时候，**做市商可以在离盘口更远的地方与市价单成交，故没有动机把单子挂到离盘口很近的地方**，因此，在市价单量变大和限价单更保守的双重因素影响下，市价单的击穿距离会快速扩大，经常到千一甚至百一。**当成交击穿很大时，平仓比较容易，因此是否预测中间价的方向就相对不那么重要了**，但是行情平淡的时候和趋势突然启动的时候，还是有预测更好，否则被逆向选择之后就只能被迫止损或者对冲锁仓。
+2, buying and selling transactions are active, not only the number of transactions, volume of these familiar concepts, but also need to pay attention to ** market orders penetrate the distance ** (i.e., a market order sent to the plate, the impact caused by the plate can reach what depth). Because the market strategy in the plate above and below the single, profits from the transaction price difference, in the market is flat, the market price of the single number of small price fluctuations, market makers if not to hang the single close, it is difficult to obtain profits, this time a market price single penetration may be only one in 10,000, and when the market is active, the market price of the single number of a lot of people, and more than the short and long entangled in a price back and forth fight, ** market makers can be farther away from the mouth of the disk The place with the market price of the single transaction, so there is no incentive to hang the single to the place very close to the opening **, therefore, in the market price of the single volume becomes large and limit single more conservative double factors, the market price of the single breakdown distance will quickly expand, often to one thousand or even one hundred and one. **When the transaction breakdown is very large, it is easier to close the position, so whether or not to predict the direction of the mid-price is relatively less important**, but the market is flat and the trend suddenly started, or have a prediction is better, otherwise be reverse selection after you can only be forced to stop or hedge lock position.
 
 ![](https://s2.loli.net/2023/08/16/f6gihlnUSOaczbZ.jpg)
 
-3、价格发生趋势性运动，往往没有什么征兆，背后导致价格从一个价位到另一个价位的因素很多很难完全掌握。一种策略是事件驱动型策略，即只在出现自己理解范围内的事件时，才进场参与进行方向性交易，当知情交易者，把握性大，但事件发生频率较低，这种机会不常有。另一种就是短趋势策略，**价格启动前很难找到信号，但在价格发生趋势性运动的过程中会出现一些特征，暗示我们价格可能会继续沿着这个方向运行，**背后的逻辑就是订单流不平衡，浮亏的单子需要止损，新进场的订单可能会更激进，这就为价格趋势性运动起到推波助澜的作用。**需要注意，趋势启动前的信号准确性很低，找提前信号很可能是无用功，而且并不是每一波趋势中途都能出现可靠信号**，所以交易机会需要等，好处是单笔利润比较高，即使是最高的手续费也可以跑这种高频。
+3, the price trend movement, often without any signs, behind the price from one price level to another, many factors are difficult to fully grasp. One strategy is an event-driven strategy, that is, only in the event of the emergence of their own understanding of the scope of the event, only to enter the field to participate in directional trading, when the informed traders, the certainty of a large, but the event occurs at a lower frequency, this opportunity is not often. Another is the short trend strategy,** it is difficult to find the signal before the price start, but in the process of the price trend movement will appear some characteristics, suggesting that we may continue to run along the direction of the price,** the logic behind the order flow imbalance, the floating loss of the single need to stop, the new entry of the order may be more aggressive, which is for the price of the trend movement to play a role in fueling the movement. **Need to pay attention to, the trend started before the signal accuracy is very low, looking for early signals is likely to be useless, and not every wave of the trend midway through the reliable signals **, so trading opportunities need to wait, the benefit of a single profit is relatively high, even with the highest commission can run this high-frequency.
 
 ![](https://s2.loli.net/2023/08/16/lxzCbrUM9IeLNtR.jpg)
 
-### 高频思路
+### High Frequency Ideas
 
-市面上公开的高频策略中，“Penny Jump”属于第一类，“2014年的简易比特币高频策略机器人”属于第二类，“韭菜收割机”属于第三类。
+Of the publicly available high-frequency strategies on the market, "Penny Jump" belongs to the first category, "Easy Bitcoin High-Frequency Strategy Robot 2014" belongs to the second category, and "Leek Harvester "Leek Harvester" belongs to the third category.
 
-分析这么多，目标已经比较明确了，适合新手宽客入门的高频策略应该是第二种——**做市类高频策略**，不需要很高的速度和预测准确性（相比于其他高频策略而言），实现难度相对较低，同时也在市场活跃的时候有着不错的收益。（此处@eric Hu，凭vip0账号最高手续费零预测纯做市5天10倍收益）
+Analyzing so much, the goal has been relatively clear, suitable for novice broadcasters to start the high-frequency strategy should be the second type - ** market-making class high-frequency strategy **, does not require a high speed and prediction accuracy (compared to other high-frequency strategy), the realization of the difficulty is relatively low, but also in the market when the market is active has a good return. (Here @eric Hu, with a vip0 account with the highest commission zero prediction pure market making 5 days 10 times the return)
 
-在这我们重新梳理一下做市策略的思路：
+Let's reorganize the idea of market making strategy here:
 
-1、目标是赚取市价单在盘口上下乱打的收益，所以需要上下挂单，因为市价单冲击距离是在一个范围内变化的，所以需要**不止挂1层单子**，同时还要**确定在多远的价格挂单最合适**，太近了可能拿到很亏的单子，太远了可能拿不到单子，同时挂单范围要能兜住最大击穿深度，确保价格恢复的时候能够迅速盈利平仓，避免长时间持仓。
+1, the goal is to earn market orders in the plate up and down the messy earnings, so you need to hang up a single up and down, because the market order impact distance is in a range of changes, so you need to ** more than hang 1 layer of single **, but also ** to determine how far away from the price of the most appropriate to hang up a single **, too close to the list may get a very loss of a single, too far away from a single that may not be able to get a single, at the same time, hang up a single range to be able to pocket the maximum depth of penetration. Ensure that the price recovery can quickly profit when the position is closed, to avoid a long time to hold the position.
 
-2、理想情况是**买卖同时成交**，如果无法同时成交可能会积累单边仓位，一旦中间价发生趋势性运动，可能会亏损，因此要想办法**保证持仓随时间趋向于零**。
+2, the ideal situation is ** buying and selling at the same time transaction **, if not at the same time transaction may accumulate unilateral positions, once the intermediate price trend movement, may lose money, so we must find ways to ** ensure that the position tends to zero over time **.
 
-3、价格发生趋势性运动的时候，为了避免单边持仓，**要想办法控制多空成交概率使其更均衡。**比如上涨的时候，买单更近，卖单更远，这样无论是买单还是卖单成交后，更容易以更高盈利的价格平仓。**除了挂单距离可以控制成交概率，通过改变挂单量也可以变相控制成交概率，预测优势方向多挂单，预测劣势方向少挂单。**
+3, the price trend movement occurs, in order to avoid unilateral positions, ** to find ways to control the probability of multi-short transaction to make it more balanced. ** For example, when rising, buy orders closer, sell orders further away, so that both buy and sell orders after the transaction, it is easier to close the position at a more profitable price. ** In addition to pending order distance can control the probability of transaction, by changing the amount of pending orders can also be disguised as a control of the probability of transaction, predicting the direction of the advantage of more pending orders, predicting the direction of the disadvantage of fewer pending orders. **
 
-为了实现以上3点，一个高频做市策略可能需要将包含很多个规则的模块组合起来，其中某个非常微小的改动都会对整个系统造成超乎意料的影响，可能改改就盈利了，优化一下又亏损了，零部件太复杂又很难做归因分析，所以必须将系统整体涵括在一套框架内，一次调优解决所有问题才行，否则五个十个条件叠加在一起将完全超出个人掌控范畴。
+In order to achieve the above three points, a high-frequency market-making strategy may need to include many rules of the module combined, which a very small change will have an unexpected impact on the entire system, may be changed on the profit, optimization and loss, parts and components are too complex and very difficult to do attribution analysis, so it must be the system as a whole included in the framework of a set of one-time tuning to solve all the problems, only, otherwise, five or ten conditions superimposed. Otherwise, five or ten conditions superimposed on each other will be completely beyond the scope of personal control.
 
-幸运的是，学术界已经有很多大佬对此进行了深入研究，基本给出了涵盖了上述3点的“完美”答案。Avellaneda, M., Stoikov, S.:High-frequency trading in a limit order book. Quant. Fin.8(3), 217–224,2008. 这篇论文从动态规划原理出发，解随机偏微分方向，得到一套解决做市商最优报价的方案，后续又有很多篇论文从不同的角度继续优化这一理论模型，相关论文可以私信我获取。
+Fortunately, there are many academics who have studied this issue in depth and basically provided the "perfect" answer that covers the above three points: Avellaneda, M., Stoikov, S.: High-frequency trading in a limit order Avellaneda, M., Stoikov, S.: High-frequency trading in a limit order. book. quant. fin. 8(3), 217-224,2008. This paper starts from the dynamic programming principle, solves the stochastic partial differential direction, and obtains a set of solutions to solve the problem of optimal quotes of market maker, and then there are a lot of papers to continue to optimize this theoretical model from a different point of view, and the related papers can be obtained by private messaging me.
 
-千千在阅读、推导公式、复现了这些论文之后，认为它们已经比较完美地解决了做市商最优报价的问题，自己的Maker型高频策略也是在这些论文的基础上修改完成。
+After reading, deriving formulas, and reproducing these papers, Qianqian believes that they have solved the problem of market maker's optimal offer more perfectly, and his own Maker-type high-frequency strategy is also modified and completed on the basis of these papers.
 
-本系列计划把这些论文的关键点提炼出来，省去冗杂的公式推导部分，直接把最核心拿来就能用的核心分享出来。
+This series plans to distill the key points of these papers, omit the redundant formula derivation part, and directly share the core of the core that can be used.
 
-后面会涉及到的内容有：
+The content that will be covered later are:
 
-1、成交概率建模2、最优挂单距离区间计算3、敞口处理模型4、价格预测模型
+1, transaction probability modeling 2, optimal pending order distance interval calculation 3, open position processing model 4, price prediction models
 
 .......
 
-## 结尾
+## Conclusion
 
-作为一个成神的前辈，只有仰望。但是大神留下的文章和代码却可以光耀后人。希望我们可以吸取大神的精华，找到自己的成神之路~~
+As a predecessor who became a god, there is only to look up to. But the articles and codes left by the gods can shine for the future generations. I hope we can learn from the essence of the gods and find our own path to godhood.
 
-惯例 附美女图片一张~~
+ Customary Attach a picture of a beautiful woman~~
 
 ![](https://s2.loli.net/2023/08/16/dL3D6ijvh2xQ1MJ.webp)
